--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -4,7 +4,7 @@
 
 * {
     font-family: $font-stack-primary;
-    color: $color-secondary;
+    color: $secondary-color;
     box-sizing: border-box;
 }
 
