Fixed errors (breakpoint) (color p)

--- a/css/styles.css
+++ b/css/styles.css
@@ -339,7 +339,7 @@ template {
 
 * {
   font-family: "Lato", sans-serif;
-  color: #58e1c1;
+  color: #777;
   box-sizing: border-box;
 }
 
@@ -355,7 +355,7 @@ a {
   color: #58e1c1;
   margin-left: 10px;
 }
-.headline-secondary {
+.headline-primary-secondary {
   font-weight: 300;
   color: #777;
 }
