--- a/scss/utilities/_variables.scss
+++ b/scss/utilities/_variables.scss
@@ -31,4 +31,4 @@ $font-weight: ('regular': 300, 'bold': 700);
 // Media Queries breakpoints */
 // ============================================= */
 
-$brk-narrow: '(min-width: 768px)';
+$brkp: '(min-width: 768px)';
