--- a/scss/components/_media-queries.scss
+++ b/scss/components/_media-queries.scss
@@ -1,7 +1,8 @@
-// ============================================= */
-//              Media Queries                    */
-// ============================================= */
-@media #{$brkp} {
+/* ============================================= */
+/*              Media Queries                    */
+/* ============================================= */
+
+@media #{$breakpoint} {
 
     .container {
         max-width: 1400px;
@@ -12,6 +13,16 @@
 
     .centered {
         @include center;
+    }
+
+    .nav {
+        flex-direction: row;
+        justify-content: flex-end;
+        align-items: center;
+    }
+
+    .nav-link {
+        flex-basis: 100px;
     }
 
     .row {
@@ -77,15 +88,6 @@
         flex-basis: 100%;
     }
 
-    .nav {
-        flex-direction: row;
-        justify-content: flex-end;
-        align-items: center;
-    }
-
-    .nav-link {
-        flex-basis: 100px;
-    }
 
     .btn {
         padding: 10px 30px;
